unpackaged/main/default/objects/Print_Run_Member__c/Print_Run_Member__c.object-meta.xml
<CustomObject>
    <label>Print Run Member</label>
    <nameField>
        <displayFormat>PRM-{00000000}</displayFormat>
        <label>Print Run Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Print Run Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>