unpackaged/main/default/objects/Print_Run_Member__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>HYPERLINK("/"&amp; Member__r.Id , Member__r.FirstName &amp; " " &amp; Member__r.LastName ,"_top")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>