unpackaged/main/default/objects/Print_Run_Member__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Print Runs</relationshipLabel>
    <relationshipName>Print_Run_Members</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>