unpackaged/main/default/objects/Print_Run_Member__c/fields/Print_Run__c.field-meta.xml
<CustomField>
    <fullName>Print_Run__c</fullName>
    <label>Print Run</label>
    <referenceTo>Print_Run__c</referenceTo>
    <relationshipLabel>Print Run Members</relationshipLabel>
    <relationshipName>Print_Run_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>